add missing flags during initialisation