@@ -24,7 +24,13 @@ test {
     useJUnitPlatform()
     finalizedBy jacocoTestReport
     jvmArgs '--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
-            '--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
+            '--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+            '--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED',
+            '--add-exports=javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/javafx.stage=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED'
     if (org.gradle.internal.os.OperatingSystem.current().isLinux()) {
         systemProperty 'glass.platform', 'Monocle'
         systemProperty 'monocle.platform', 'Headless'
